changed site name

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       href="https://cdn.jsdelivr.net/npm/antd@5.12.5/dist/antd.css"
     />
 
-    <title>React App</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
